tests/NormalTests/paczka1/small_fuzzy/99307062.err
Error in line 2: NjOiUK A65 58,6
Error in line 9: vwi6kD0Pg S388 97,7
Error in line 11: rMjln A925 -1,6
Error in line 15: A925 A230 -1,4
